
@startuml

skinparam backgroundColor #FEFEFE
skinparam wrapWidth 600
package "DLT" #DDDDDD
{

interface "QDLTPluginInterface"
{
}

class "QDltFile"
{
}

class "QDltMsg"
{
}

interface "QDltPluginControlInterface"
{
}

interface "QDltPluginViewerInterface"
{
}

}

package "DMA_LogsWrapper" #DDDDDD
{

class "CDLTFileWrapper"
{
}

class "CDLTMsgDecoder"
{
}

class "CDLTMsgWrapper"
{
}

}

package "DMA_LogsWrapper_API" #DDDDDD
{

class "IDLTLogsWrapperCreator"
{
    + {abstract} virtual tFileWrapperPtr createDLTFileWrapper( QDltFile* pFile ) const = 0
    + {abstract} virtual tMsgDecoderPtr createMsgDecoder(QDltMessageDecoder* pMessageDecoder) const = 0
    + {abstract} virtual tMsgWrapperPtr createDLTMsgWrapper( QDltMsg& msg ) const = 0
}

}

package "DMA_Plugin" #DDDDDD
{

class "DLTMessageAnalyzerPlugin"
{
}

}

'====================Inheritance section====================
QDLTPluginInterface <|-- DLTMessageAnalyzerPlugin : implements
QDltPluginControlInterface <|-- DLTMessageAnalyzerPlugin : implements
QDltPluginViewerInterface <|-- DLTMessageAnalyzerPlugin : implements

'====================Dependencies section====================
CDLTFileWrapper "1" o-- "1" QDltFile : uses
CDLTMsgDecoder "1" o-- "1" QDltMsg : uses
CDLTMsgWrapper "1" --> "1" QDltMsg : uses
IDLTLogsWrapperCreator "1" --> "*" QDltFile : uses
IDLTLogsWrapperCreator "1" --> "*" QDltMsg : uses

@enduml